@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -185,9 +185,8 @@ class DefaultLoaderDelegate implements LoaderDelegate {
         private URL doFindResource(String name) {
             if (classFiles.containsKey(name)) {
                 try {
-                    return new URL(null,
-                                   new URI("jshell", null, "/" + name, null).toString(),
-                                   new ResourceURLStreamHandler(name));
+                    return URL.of(new URI("jshell", null, "/" + name, null),
+                                  new ResourceURLStreamHandler(name));
                 } catch (MalformedURLException | URISyntaxException ex) {
                     throw new InternalError(ex);
                 }
