@@ -1,5 +1,6 @@
 /*
  * Copyright (c) 2021, Red Hat, Inc. All rights reserved.
+ * Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,9 +25,11 @@
 
 /**
  * @test TestPrimitiveArrayCriticalWithBadParam
- * @bug 8269697
+ * @bug 8269697 8292674
  * @summary -Xcheck:jni should catch wrong parameter passed to GetPrimitiveArrayCritical
+ * @comment Tests reporting with regular thread and virtual thread.
  * @library /test/lib
+ * @enablePreview
  * @run main/native TestPrimitiveArrayCriticalWithBadParam
  */
 import java.util.List;
@@ -47,39 +50,54 @@ public class TestPrimitiveArrayCriticalWithBadParam {
 
     public static void main(String[] args) {
         if (args.length > 0) {
-            test();
+            test(args[0]);
         } else {
-            runTest();
+            runTest(false);
+            runTest(true);
         }
     }
 
-    private static void runTest() {
+    private static void runTest(boolean useVThread) {
         List<String> pbArgs = new ArrayList<>();
         pbArgs.add("-XX:-CreateCoredumpOnCrash");
         pbArgs.add("-Xcheck:jni");
+        pbArgs.add("--enable-preview");
         pbArgs.add("-Djava.library.path=" + Utils.TEST_NATIVE_PATH);
         pbArgs.add(TestPrimitiveArrayCriticalWithBadParam.class.getName());
-        pbArgs.add("test");
+        pbArgs.add(useVThread ? "vtest" : "test");
         try {
             ProcessBuilder pb = ProcessTools.createJavaProcessBuilder(pbArgs.toArray(new String[0]));
             OutputAnalyzer analyzer = new OutputAnalyzer(pb.start());
 
             // -Xcheck:jni should warn the bad parameter
             analyzer.shouldContain("FATAL ERROR in native method: Primitive type array expected but not received for JNI array operation");
+            analyzer.shouldContain("TestPrimitiveArrayCriticalWithBadParam.pin");
             analyzer.shouldNotHaveExitValue(0);
         } catch (IOException e) {
             throw  new RuntimeException(e);
         }
     }
 
-    private static void test() {
-        Object[] objs = new Object[10];
-        for (int i = 0; i < objs.length; i++) {
-            objs[i] = new MyClass();
+    private static void test(String mode) {
+        Runnable r = () -> {
+            Object[] objs = new Object[10];
+            for (int i = 0; i < objs.length; i++) {
+                objs[i] = new MyClass();
+            }
+            pin(objs);
+            System.out.println("Object array pinned");
+            unpin(objs);
+        };
+        if (mode.equals("vtest")) {
+            Thread t = Thread.ofVirtual().start(r);
+            try {
+                t.join();
+            } catch (InterruptedException ex) {
+                throw new Error("unexpected", ex);
+            }
+        } else {
+            r.run();
         }
-        pin(objs);
-        System.out.println("Object array pinned");
-        unpin(objs);
     }
     public static class MyClass {
         public Object ref = new Object();
