@@ -21,12 +21,18 @@
  * questions.
  */
 
-/**
- * @test
+/*
+ * @test id=default
  * @summary Verifies JVMTI hadles pinned virtual threads correctly.
- * @requires vm.continuations
  * @compile --enable-preview -source ${jdk.version} PinnedTaskTest.java
  * @run main/othervm/native --enable-preview -agentlib:PinnedTaskTest PinnedTaskTest
+ */
+
+/*
+ * @test id=no-vmcontinuations
+ * @requires vm.continuations
+ * @compile --enable-preview -source ${jdk.version} PinnedTaskTest.java
+ * @run main/othervm/native --enable-preview -agentlib:PinnedTaskTest -XX:+UnlockExperimentalVMOptions -XX:-VMContinuations PinnedTaskTest
  */
 
 import java.util.concurrent.atomic.AtomicBoolean;
