@@ -22,8 +22,20 @@
  */
 
 /*
- * @test
+ * @test id=default
  * @summary Test SuspendAllVirtualThreads/ResumeAllVirtualThreads
+ * @library /test/lib
+ * @compile --enable-preview -source ${jdk.version} SuspendResumeAll.java
+ * @run driver jdk.test.lib.FileInstaller . .
+ * @run main/othervm/native
+ *      --enable-preview
+ *      -Djava.util.concurrent.ForkJoinPool.common.parallelism=1
+ *      -agentlib:SuspendResumeAll
+ *      SuspendResumeAll
+ */
+
+/*
+ * @test id=no-vmcontinuations
  * @requires vm.continuations
  * @library /test/lib
  * @compile --enable-preview -source ${jdk.version} SuspendResumeAll.java
@@ -32,6 +44,8 @@
  *      --enable-preview
  *      -Djava.util.concurrent.ForkJoinPool.common.parallelism=1
  *      -agentlib:SuspendResumeAll
+ *      -XX:+UnlockExperimentalVMOptions
+ *      -XX:-VMContinuations
  *      SuspendResumeAll
  */
 
