@@ -30,12 +30,11 @@
  * @run testng/othervm -Djava.lang.invoke.VarHandle.VAR_HANDLE_GUARDS=false -Djava.lang.invoke.VarHandle.VAR_HANDLE_IDENTITY_ADAPT=true -Xverify:all TestMemoryAccess
  */
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.GroupLayout;
-import java.lang.foreign.MemoryAddress;
 import java.lang.foreign.MemoryLayout;
 import java.lang.foreign.MemoryLayout.PathElement;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import java.lang.foreign.SequenceLayout;
 import java.lang.foreign.ValueLayout;
 
@@ -92,8 +91,8 @@ public class TestMemoryAccess {
 
     private void testAccessInternal(Function<MemorySegment, MemorySegment> viewFactory, MemoryLayout layout, VarHandle handle, Checker checker) {
         MemorySegment outer_segment;
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment segment = viewFactory.apply(MemorySegment.allocateNative(layout, session));
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment segment = viewFactory.apply(MemorySegment.allocateNative(layout, arena.scope()));
             boolean isRO = segment.isReadOnly();
             try {
                 checker.check(handle, segment);
@@ -124,8 +123,8 @@ public class TestMemoryAccess {
 
     private void testArrayAccessInternal(Function<MemorySegment, MemorySegment> viewFactory, SequenceLayout seq, VarHandle handle, ArrayChecker checker) {
         MemorySegment outer_segment;
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment segment = viewFactory.apply(MemorySegment.allocateNative(seq, session));
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment segment = viewFactory.apply(MemorySegment.allocateNative(seq, arena.scope()));
             boolean isRO = segment.isReadOnly();
             try {
                 for (int i = 0; i < seq.elementCount(); i++) {
@@ -193,8 +192,8 @@ public class TestMemoryAccess {
 
     private void testMatrixAccessInternal(Function<MemorySegment, MemorySegment> viewFactory, SequenceLayout seq, VarHandle handle, MatrixChecker checker) {
         MemorySegment outer_segment;
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment segment = viewFactory.apply(MemorySegment.allocateNative(seq, session));
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment segment = viewFactory.apply(MemorySegment.allocateNative(seq, arena.scope()));
             boolean isRO = segment.isReadOnly();
             try {
                 for (int i = 0; i < seq.elementCount(); i++) {
@@ -465,8 +464,8 @@ public class TestMemoryAccess {
         };
 
         MatrixChecker ADDR = (handle, segment, r, c) -> {
-            handle.set(segment, r, c, MemoryAddress.ofLong(r + c));
-            assertEquals(MemoryAddress.ofLong(r + c), (MemoryAddress)handle.get(segment, r, c));
+            handle.set(segment, r, c, MemorySegment.ofAddress(r + c));
+            assertEquals(MemorySegment.ofAddress(r + c), (MemorySegment) handle.get(segment, r, c));
         };
 
         MatrixChecker FLOAT = (handle, segment, r, c) -> {
