@@ -27,9 +27,10 @@
  * @run testng TestSpliterator
  */
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemoryLayout;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.SegmentScope;
 import java.lang.foreign.SequenceLayout;
 
 import java.lang.invoke.VarHandle;
@@ -42,6 +43,7 @@ import java.util.concurrent.atomic.AtomicLong;
 import java.util.stream.LongStream;
 
 import java.lang.foreign.ValueLayout;
+
 import org.testng.annotations.*;
 
 import static org.testng.Assert.*;
@@ -57,8 +59,8 @@ public class TestSpliterator {
         SequenceLayout layout = MemoryLayout.sequenceLayout(size, ValueLayout.JAVA_INT);
 
         //setup
-        try (MemorySession session = MemorySession.openShared()) {
-            MemorySegment segment = MemorySegment.allocateNative(layout, session);
+        try (Arena arena = Arena.openShared()) {
+            MemorySegment segment = MemorySegment.allocateNative(layout, arena.scope());;
             for (int i = 0; i < layout.elementCount(); i++) {
                 INT_HANDLE.set(segment, (long) i, i);
             }
@@ -84,7 +86,7 @@ public class TestSpliterator {
         SequenceLayout layout = MemoryLayout.sequenceLayout(1024, ValueLayout.JAVA_INT);
 
         //setup
-        MemorySegment segment = MemorySegment.allocateNative(layout, MemorySession.openImplicit());
+        MemorySegment segment = MemorySegment.allocateNative(layout, SegmentScope.auto());
         for (int i = 0; i < layout.elementCount(); i++) {
             INT_HANDLE.set(segment, (long) i, i);
         }
@@ -99,37 +101,58 @@ public class TestSpliterator {
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadSpliteratorElementSizeTooBig() {
-        MemorySegment.ofArray(new byte[2]).spliterator(ValueLayout.JAVA_INT);
+        MemorySegment.allocateNative(2, SegmentScope.auto())
+                .spliterator(ValueLayout.JAVA_INT);
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadStreamElementSizeTooBig() {
-        MemorySegment.ofArray(new byte[2]).elements(ValueLayout.JAVA_INT);
+        MemorySegment.allocateNative(2, SegmentScope.auto())
+                .elements(ValueLayout.JAVA_INT);
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadSpliteratorElementSizeNotMultiple() {
-        MemorySegment.ofArray(new byte[7]).spliterator(ValueLayout.JAVA_INT);
+        MemorySegment.allocateNative(7, SegmentScope.auto())
+                .spliterator(ValueLayout.JAVA_INT);
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadStreamElementSizeNotMultiple() {
-        MemorySegment.ofArray(new byte[7]).elements(ValueLayout.JAVA_INT);
+        MemorySegment.allocateNative(7, SegmentScope.auto())
+                .elements(ValueLayout.JAVA_INT);
+    }
+
+    @Test
+    public void testSpliteratorElementSizeMultipleButNotPowerOfTwo() {
+        MemorySegment.allocateNative(12, SegmentScope.auto())
+                .spliterator(ValueLayout.JAVA_INT);
+    }
+
+    @Test
+    public void testStreamElementSizeMultipleButNotPowerOfTwo() {
+        MemorySegment.allocateNative(12, SegmentScope.auto())
+                .elements(ValueLayout.JAVA_INT);
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadSpliteratorElementSizeZero() {
-        MemorySegment.ofArray(new byte[7]).spliterator(MemoryLayout.sequenceLayout(0, ValueLayout.JAVA_INT));
+        MemorySegment.allocateNative(7, SegmentScope.auto())
+                .spliterator(MemoryLayout.sequenceLayout(0, ValueLayout.JAVA_INT));
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadStreamElementSizeZero() {
-        MemorySegment.ofArray(new byte[7]).elements(MemoryLayout.sequenceLayout(0, ValueLayout.JAVA_INT));
+        MemorySegment.allocateNative(7, SegmentScope.auto())
+                .elements(MemoryLayout.sequenceLayout(0, ValueLayout.JAVA_INT));
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testHyperAligned() {
-        MemorySegment.ofArray(new byte[8]).elements(MemoryLayout.sequenceLayout(2, ValueLayout.JAVA_INT.withBitAlignment(64)));
+        MemorySegment segment = MemorySegment.allocateNative(8, SegmentScope.auto());
+        // compute an alignment constraint (in bytes) which exceed that of the native segment
+        long bigByteAlign = Long.lowestOneBit(segment.address()) << 1;
+        segment.elements(MemoryLayout.sequenceLayout(2, ValueLayout.JAVA_INT.withBitAlignment(bigByteAlign * 8)));
     }
 
     static long sumSingle(long acc, MemorySegment segment) {
