@@ -22,8 +22,9 @@
  */
 package org.openjdk.bench.java.lang.foreign;
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+
 import org.openjdk.jmh.annotations.Benchmark;
 import org.openjdk.jmh.annotations.BenchmarkMode;
 import org.openjdk.jmh.annotations.Fork;
@@ -56,7 +57,7 @@ public class LoopOverNonConstantFP {
     static final int CARRIER_SIZE = (int)JAVA_DOUBLE.byteSize();
     static final int ALLOC_SIZE = ELEM_SIZE * CARRIER_SIZE;
 
-    MemorySession session;
+    Arena arena;
     MemorySegment segmentIn, segmentOut;
     long unsafe_addrIn, unsafe_addrOut;
     ByteBuffer byteBufferIn, byteBufferOut;
@@ -71,9 +72,9 @@ public class LoopOverNonConstantFP {
         for (int i = 0; i < ELEM_SIZE; i++) {
             unsafe.putDouble(unsafe_addrOut + (i * CARRIER_SIZE), i);
         }
-        session = MemorySession.openConfined();
-        segmentIn = MemorySegment.allocateNative(ALLOC_SIZE, session);
-        segmentOut = MemorySegment.allocateNative(ALLOC_SIZE, session);
+        arena = Arena.openConfined();
+        segmentIn = MemorySegment.allocateNative(ALLOC_SIZE, arena.scope());
+        segmentOut = MemorySegment.allocateNative(ALLOC_SIZE, arena.scope());
         for (int i = 0; i < ELEM_SIZE; i++) {
             segmentIn.setAtIndex(JAVA_DOUBLE, i, i);
         }
@@ -92,7 +93,7 @@ public class LoopOverNonConstantFP {
 
     @TearDown
     public void tearDown() {
-        session.close();
+        arena.close();
         unsafe.invokeCleaner(byteBufferIn);
         unsafe.invokeCleaner(byteBufferOut);
         unsafe.freeMemory(unsafe_addrIn);
